# project2_galimova_m25555

./: .gitignore  Makefile  README.md  decorators.cast  demo.cast  final_decorators.cast  final_demo.cast  pyproject.toml
data/: users.json
src/: decorators.py
src/primitive_db/: constants.py  core.py  engine.py  main.py  parser.py  utils.py
