[tool.poetry]
name = "project2_galimova_m25555"
version = "0.1.0"
description = ""
authors = ["Karina Galimova  <karina.galimova.98@mail.ru>"]

packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
project = "src.primitive_db.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
